@@ -1,4 +1,8 @@
 
+[COLOR grey][Date: 2013.08.29][/COLOR][COLOR black][Post: 1][/COLOR]
+[COLOR red][B]News:[/B][/COLOR]  addon currently being updated a lot 
+### while testing and weeding out the troublesome stations.
+
 [COLOR grey][Date: 2013.08.28][/COLOR][COLOR black][Post: 4][/COLOR]
 [COLOR red][B]News:[/B][/COLOR]  #XBMCHUB @ irc.freenode.net
 
